<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_dark">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/grey"
        android:textSize="@dimen/dp_84"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_100"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/India"
        android:textColor="@color/grey"
        android:textSize="@dimen/dp_30"
        android:textStyle="italic"
        android:layout_gravity="center"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Leading_Market"
        android:textColor="@color/grey"
        android:textSize="@dimen/dp_30"
        android:textStyle="italic"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_30"/>


</androidx.appcompat.widget.LinearLayoutCompat>